test/types/records/split-init/incompatible-type1.good
incompatible-type1.chpl:5: In function 'test':
incompatible-type1.chpl:8: error: could not find a copy initializer ('init=') for type 'R' from type 'int(64)'
incompatible-type1.chpl:3: note: this candidate did not match: R.init=(other: R)
incompatible-type1.chpl:8: note: because call actual argument #1 with type int(64)
incompatible-type1.chpl:3: note: is passed to formal 'other: R'
